fix the page flickering on tablet when touch the search bar

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -897,6 +897,9 @@ textarea {
 }
 //slider toggle
 .isSidebarOpen {
+  #main{
+    right: 0px!important;
+  }
   @include desktop {
     #main {
       right: 0px!important;
@@ -919,6 +922,7 @@ textarea {
       }
       .sidebar-panel {
         right: -$sidebar!important;
+        position: fixed;
         top: 0px;
       }
     }
